--- a/src/bin/templates/layout.html
+++ b/src/bin/templates/layout.html
@@ -11,7 +11,7 @@
   <h1>MiniTwit</h1>
   <div class="navigation">
     {{ if .user }}
-    <a href="/">my timeline</a> |
+    <a href="/static">my timeline</a> |
     <a href="/public">public timeline</a> |
     <a href="/logout">sign out [{{ .user.Username }}]</a>
     {{ else }}
