--- a/templates/register.html
+++ b/templates/register.html
@@ -1,19 +1,38 @@
-{% extends "layout.html" %}
-{% block title %}Sign Up{% endblock %}
-{% block body %}
-  <h2>Sign Up</h2>
-  {% if error %}<div class=error><strong>Error:</strong> {{ error }}</div>{% endif %}
-  <form action="" method=post>
-    <dl>
-      <dt>Username:
-      <dd><input type=text name=username size=30 value="{{ request.form.username }}">
-      <dt>E-Mail:
-      <dd><input type=text name=email size=30 value="{{ request.form.email }}">
-      <dt>Password:
-      <dd><input type=password name=password size=30>
-      <dt>Password <small>(repeat)</small>:
-      <dd><input type=password name=password2 size=30>
-    </dl>
-    <div class=actions><input type=submit value="Sign Up"></div>
-  </form>
-{% endblock %}
+<!doctype html>
+<title>Sign Up | MiniTwit</title>
+<link rel=stylesheet type=text/css href="/static/style.css">
+<div class=page>
+  <h1>MiniTwit</h1>
+  <div class=navigation>
+    <a href="/public">public timeline</a> |
+    <a href="/register">sign up</a> |
+    <a href="/login">sign in</a>
+  </div>
+  {{ if .flashes }}
+    <ul class=flashes>
+    {{ range .flashes }}
+      <li>{{ . }}</li>
+    {{ end }}
+    </ul>
+  {{ end }}
+  <div class=body>
+    <h2>Sign Up</h2>
+    {{ if .error }}<div class=error><strong>Error:</strong> {{ .error }}</div>{{ end }}
+    <form action="" method=post>
+      <dl>
+        <dt>Username:
+        <dd><input type=text name=username size=30>
+        <dt>E-Mail:
+        <dd><input type=text name=email size=30>
+        <dt>Password:
+        <dd><input type=password name=password size=30>
+        <dt>Password <small>(repeat)</small>:
+        <dd><input type=password name=password2 size=30>
+      </dl>
+      <div class=actions><input type=submit value="Sign Up"></div>
+    </form>
+  </div>
+  <div class=footer>
+    MiniTwit &mdash; A Gin Application
+  </div>
+</div>
