--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,30 +1,3 @@
 <!doctype html>
-<title>{{ block "title" . }}Welcome{{ end }} | MiniTwit</title>
+<title>MiniTwit</title>
 <link rel=stylesheet type=text/css href="/static/style.css">
-<div class=page>
-  <h1>MiniTwit</h1>
-  <div class=navigation>
-  {{ if .user }}
-    <a href="/">my timeline</a> |
-    <a href="/public">public timeline</a> |
-    <a href="/logout">sign out [{{ index .user "username" }}]</a>
-  {{ else }}
-    <a href="/public">public timeline</a> |
-    <a href="/register">sign up</a> |
-    <a href="/login">sign in</a>
-  {{ end }}
-  </div>
-  {{ if .flashes }}
-    <ul class=flashes>
-    {{ range .flashes }}
-      <li>{{ . }}</li>
-    {{ end }}
-    </ul>
-  {{ end }}
-  <div class=body>
-  {{ block "body" . }}{{ end }}
-  </div>
-  <div class=footer>
-    MiniTwit &mdash; A Gin Application
-  </div>
-</div>
